kargo-lab-test-deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
    environment: test
    stage: test
  name: frontend
  namespace: kargo-lab-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      environment: test
      stage: test
  template:
    metadata:
      labels:
        app: frontend
        environment: test
        stage: test
    spec:
      containers:
      - image: nginx:1.25-alpine
        name: frontend
        ports:
        - containerPort: 80
          name: http
        securityContext:
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html
      volumes:
      - configMap:
          name: frontend-html
        name: html
