kargo-lab-uat-deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
    environment: uat
    stage: uat
  name: frontend
  namespace: kargo-lab-uat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      environment: uat
      stage: uat
  template:
    metadata:
      labels:
        app: frontend
        environment: uat
        stage: uat
    spec:
      containers:
      - image: nginx:1.25-alpine
        name: frontend
        ports:
        - containerPort: 80
          name: http
        securityContext:
          allowPrivilegeEscalation: false
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: html
      volumes:
      - configMap:
          name: frontend-html
        name: html
