kargo-lab-prod-service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
    environment: prod
    stage: prod
  name: frontend
  namespace: kargo-lab-prod
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: frontend
    environment: prod
    stage: prod
