kargo-lab-prod-service-prod-demo-app.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kargo.akuity.io/stage: prod
  labels:
    app: demo-app
    app.kubernetes.io/component: web
    app.kubernetes.io/managed-by: kargo
    app.kubernetes.io/name: demo-app
    app.kubernetes.io/part-of: kargo-learning-lab
    environment: prod
    stage: prod
  name: prod-demo-app
  namespace: kargo-lab-prod
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: demo-app
    app.kubernetes.io/managed-by: kargo
    app.kubernetes.io/part-of: kargo-learning-lab
    environment: prod
    stage: prod
  sessionAffinity: None
  type: ClusterIP
