kargo-lab-test-service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
    environment: test
    stage: test
  name: frontend
  namespace: kargo-lab-test
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: frontend
    environment: test
    stage: test
