kargo-lab-test-service-test-demo-app.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kargo.akuity.io/stage: test
  labels:
    app: demo-app
    app.kubernetes.io/component: web
    app.kubernetes.io/managed-by: kargo
    app.kubernetes.io/name: demo-app
    app.kubernetes.io/part-of: kargo-learning-lab
    environment: test
    stage: test
  name: test-demo-app
  namespace: kargo-lab-test
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: demo-app
    app.kubernetes.io/managed-by: kargo
    app.kubernetes.io/part-of: kargo-learning-lab
    environment: test
    stage: test
  sessionAffinity: None
  type: ClusterIP
