kargo-lab-uat-service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
    environment: uat
    stage: uat
  name: frontend
  namespace: kargo-lab-uat
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: frontend
    environment: uat
    stage: uat
