kargo-lab-uat-service-uat-demo-app.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kargo.akuity.io/stage: uat
  labels:
    app: demo-app
    app.kubernetes.io/component: web
    app.kubernetes.io/managed-by: kargo
    app.kubernetes.io/name: demo-app
    app.kubernetes.io/part-of: kargo-learning-lab
    environment: uat
    stage: uat
  name: uat-demo-app
  namespace: kargo-lab-uat
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: demo-app
    app.kubernetes.io/managed-by: kargo
    app.kubernetes.io/part-of: kargo-learning-lab
    environment: uat
    stage: uat
  sessionAffinity: None
  type: ClusterIP
