kargo-lab-test-route-test-demo-app.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kargo.akuity.io/stage: test
  labels:
    app: demo-app
    app.kubernetes.io/component: web
    app.kubernetes.io/managed-by: kargo
    app.kubernetes.io/name: demo-app
    app.kubernetes.io/part-of: kargo-learning-lab
    environment: test
    stage: test
  name: test-demo-app
  namespace: kargo-lab-test
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: test-demo-app
    weight: 100
  wildcardPolicy: None
